2002-10-19  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade: added prefs dialog (not hooked yet)
	* data/totem.schemas.in: added VCD/DVD device configuration
	(Closes:#95653), default is /dev/cdrom, both Debian and Red Hat create
	the link by default
	* src/gtk-xine.c: (load_config_from_gconf): added support for optical
	media configuration
	* src/totem.c: (totem_action_open_files), (popup_hide),
	(on_motion_notify_event): removed debug, added support for dvd: and
	vcd: arguments (Closes:#95874)
	* src/video-utils.c: (gdk_window_set_fullscreen): added some more
	atoms needed for fullscreen

2002-10-19  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (gtk_xine_set_fullscreen),
	(gtk_xine_set_show_cursor): just show/hide a window instead of
	creating a new one each time (Closes: #91892)

2002-10-19  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (popup_hide): disconnect the "popup_hide" callback
	before hiding the popup (Closes: #91836)

2002-10-19  Bastien Nocera  <hadess@hadess.net>

	* .cvsignore: upd
	* data/totem.glade: remove the additional events on the popups,
	they're already in the sources

2002-10-19  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: added the gnome-vfs xine plugin
	* configure.in: libtool-fu
	* data/totem.applications: we can do URIs any day
	* data/totem.glade: controls popup
	* src/Makefile.am: upd
	* src/gtk-playlist.c: (gtk_playlist_add_one_mrl),
	(gtk_playlist_mrl_to_title): remove escapes from filenames before
	showing them
	* src/gtk-xine.c: (gtk_xine_instance_init), (frame_output_cb),
	(gtk_xine_set_fullscreen), (gtk_xine_is_seekable): cleanups, if stream
	length is 0, don't set it as seekable
	* src/input_gnomevfs.c: added, not functional yet because of build
	problems
	* src/totem.c: (play_pause_set_label), (volume_set_image),
	(totem_action_fullscreen_toggle), (totem_action_set_mrl),
	(totem_action_previous), (totem_action_next), (update_sliders_cb),