@@ -1,3 +1,8 @@
+2002-10-21  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem.c: (totem_action_set_mrl), (seek_cb): patch by John
+	McCutchan <ttb@tentacle.dhs.org>, to move the correct seekbars around
+
 2002-10-19  Bastien Nocera  <hadess@hadess.net>
 
 	* data/totem.glade: added prefs dialog (not hooked yet)
